@startuml

class Alumno {
    - nombre : String
    - apellido : String
    - materiasAprobadas : Set<Materia>
}

class Materia {
    - nombre : String
    - materiasCorrelativas : Set<Materia>
}

class Inscripcion {
    - alumnoAInscribir : Alumno
    - materiasAInscribir : Set<Materia>
}

Alumno --> "*" Materia
Inscripcion --> "*" Materia
Inscripcion -l-> Alumno
Materia --> "*" Materia


@enduml